# op-alpha-systems-automation

./: .bandit  .coverage  .coveragerc  .dockerignore  .env.canary  .flake8  .gitignore  .pre-commit-config.yaml  CI_CD_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DOCKER_COMPOSE_GUIDE.md  Dockerfile  LICENSE  PERFORMANCE.md  README.md  SECURITY.md  TESTING_GUIDE.md  backup.bat  ci_pipeline.py  cleanup_tests.bat  coverage.xml  coverage_report.txt  debugging-cheatsheet.md  deploy.bat  docker-build.bat  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker-logs.bat  docker-rebuild.bat  docker-scale.bat  docker-start.bat  docker-status.bat  docker-stop.bat  docker-test.bat  generate_keys.py  health-check.bat  install.bat  locustfile.py  optimize_system.bat  (+19 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
autom8/: __init__.py  alerts.py  analyze_logs.py  api.py  cli.py  config.py  config_validator.py  core.py  dashboard.py  db_shell.py  demo_tasks.py  init_database.py  inspect_db.py  interfaces.py  licensing.py  logging_config.py  metrics.py  models.py  monitor_scheduler.py  ownership.py  performance.py  scheduler.py  security.py  seed_data.py  tasks.py  test_api_manual.py  test_monitoring.py  test_paths.py  test_scheduler.py
autom8/serializers/: __init__.py  contacts.py  info.py  tasklogs.py
autom8/services/: execution_service.py  startup_service.py
autom8/templates/: alert_email.html
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT.md  QUICKSTART.md  RELEASE_TEMPLATE.md  architecture-diagram.md  autom8.1
tests/: __init__.py  conftest.py  test_api.py  test_models.py  test_monitoring.py  test_performance.py  test_scheduler.py  test_security.py  test_tasks.py
tests/integration/: test_api.py  test_database.py  test_scheduler.py
tests/unit/: test_api_advanced.py  test_cli.py  test_config_validator.py  test_core.py  test_core_utils.py  test_coverage.py  test_demo_tasks.py  test_execution_service.py  test_interfaces_enhanced.py  test_limited_mode.py  test_models.py  test_models_coverage.py  test_ownership.py  test_scheduler_advanced.py  test_scheduler_jobs.py  test_scripts.py  test_security.py  test_security_enhanced.py  test_startup_service.py  test_tasks.py  test_visuals.py
